Lots of numeric stuff added

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -1,16 +1,16 @@
 \begin{abbreviations}
-List of common abbreviations, if an abbreviation is important enough to warrant a section in this thesis, the section will be referenced.
+List of common abbreviations, a section is referenced when applicable. Entries are separated between the fields of physics and computer science.
 
 \begin{table}[h]
   \centering
-  \begin{tabular}{l|l|l}
+  \begin{tabular}{lll}
     
     \hline
 
-    3$\alpha$ & Triple-$\alpha$ helium burning & \ref{sec:evolvedstars} \\
+    3$\alpha$ & Triple-$\alpha$ & \ref{sec:evolvedstars} \\
     AGB & Asymptotic Giant Branch & \ref{sec:evolvedstars} \\
     \bidmas{} & Binary Interaction Dust Model with Accretion and Sputtering & Section \ref{sec:bidmas} \\
-    CAK & Castor, Abbott \& Klein (\citeyear{castor_radiation-driven_1975}) theory \& Section \ref{sec:cak} \\
+    CAK & Castor, Abbott \& Klein (\citeyear{castor_radiation-driven_1975}) theory & Section \ref{sec:cak} \\
     CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
     FGC & Fighting Game Community & Section \ref{sec:wcrcooling} \\
     GCR & Galactic Cosmic Ray & Section \ref{sec:wcrcooling} \\
@@ -30,13 +30,20 @@ List of common abbreviations, if an abbreviation is important enough to warrant 
 
     \hline
 
-    AVX & Advanced Vector Extensions & \\
-    GCC & GNU Compiler Collection & \\
-    GNU & GNU's Not Unix! & \\
-    ICC & Intel Compiler Collection & \\
-    JIT & Just In Time & Section \ref{sec:visualisation} \\
+    AVX  & Advanced Vector Extensions & \\
+    GCC  & GNU Compiler Collection & \\
+    GNU  & GNU's Not Unix! & \\
+    GPU  & Graphics Processing Unit & \\
+    ICC  & Intel Compiler Collection & \\
+    JIT  & Just In Time & Section \ref{sec:visualisation} \\
+    MPI  & Message Passing Interface & Appendix \ref{app:parallelism} \\
     SIMD & Single Instruction, Multiple Data & \\
-    GPU & Graphics Processing Unit & \\
+    SMT  & Simultaneous Multi-Threading & \\
+
+    \hline
+
+    RK & Runge-Kutta & \\
+    CFL & Courant-Friedrichs-Lewy & Section \ref{sec:numsim} \\
 
   \end{tabular} 
   \label{tbl:Abbreviations}
