--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -2,7 +2,7 @@
 
 List of common symbols, if symbol requires a derivation, the appropriate equation within this thesis will be referenced. If the symbol is a unit, the value in CGS units will be provided instead. 
 
-\begin{longtable}[c]{l|l|l}
+\begin{longtable}[c]{lll}
   \hline
   \endhead
   \hline
@@ -21,7 +21,7 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
   $H_{coll}$ & Grain heating rate due to ions & \\
   $H_{el}$ & Grain heating rate due to electrons & \\
   $i$ & Inclination & \\
-  $\mathcal{L}$ & Cooling rate per unit volume (typically \si{\erg\per\centi\metre\cubed}) & Eq. \ref{eq:energylossrate} \\ 
+  $\mathcal{L}$ & Cooling rate per unit volume & Eq. \ref{eq:energylossrate} \\ 
   $\lumin_\star$ & Stellar luminosity & \\
   $\mass_\star$ & Stellar mass & \\
   $\mdot$ & Mass loss rate & \\
@@ -47,7 +47,7 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
   $\mu$ & Mean molecular mass & \\
 
-  $\kappa$ & Sub-timestep fraction & Eq. \ref{eq:kappafirstuse} \\
+  $\kappa$ & Sub-timestep fraction & Section \ref{eq:cooling-implementation} \\
 
   $\chi$ & Cooling parameter  & Eq. \ref{eq:coolingparameter} \\
 
