--- a/References/library.bib
+++ b/References/library.bib
@@ -129,6 +129,22 @@
   file = {/Users/py13je/Zotero/storage/NJCRJJ2P/Altwegg et al. - 2019 - Cometary Chemistry and the Origin of Icy Solar Sys.pdf}
 }
 
+@inproceedings{amdahlValiditySingleProcessor1967,
+  title = {Validity of the Single Processor Approach to Achieving Large Scale Computing Capabilities},
+  booktitle = {Proceedings of the {{April}} 18-20, 1967, Spring Joint Computer Conference},
+  author = {Amdahl, Gene M.},
+  year = {1967},
+  month = apr,
+  series = {{{AFIPS}} '67 ({{Spring}})},
+  pages = {483--485},
+  publisher = {{Association for Computing Machinery}},
+  address = {{New York, NY, USA}},
+  doi = {10.1145/1465482.1465560},
+  abstract = {For over a decade prophets have voiced the contention that the organization of a single computer has reached its limits and that truly significant advances can be made only by interconnection of a multiplicity of computers in such a manner as to permit cooperative solution. Variously the proper direction has been pointed out as general purpose computers with a generalized interconnection of memories, or as specialized computers with geometrically related memory interconnections and controlled by one or more instruction streams.},
+  isbn = {978-1-4503-7895-6},
+  file = {/Users/py13je/Zotero/storage/HV52UPJN/Amdahl - 1967 - Validity of the single processor approach to achie.pdf}
+}
+
 @book{apaiProtoplanetaryDustAstrophysical2010,
   title = {Protoplanetary {{Dust}}: {{Astrophysical}} and {{Cosmochemical Perspectives}}},
   shorttitle = {Protoplanetary {{Dust}}},
@@ -1455,6 +1471,20 @@
   abstract = {The interaction between the strong winds in stellar colliding-wind binary (CWB) systems produces two shock fronts, delimiting the wind-collision region (WCR). There, particles are expected to be accelerated mainly via diffusive shock acceleration. We investigate the injection and acceleration of protons in typical CWB systems by means of Monte Carlo simulations, with both a test-particle approach and a nonlinear method modeling a shock locally modified by the backreaction of the accelerated protons. We use magnetohydrodynamic simulations to determine the background plasma in the WCR and its vicinity. This allows us to consider particle acceleration at both shocks, on either side of the WCR, with a realistic large-scale magnetic field. We highlight the possible effects of particle acceleration on the local shock profiles at the WCR. We include the effect of magnetic field amplification, due to resonant-streaming instability, and compare results without and with the backreaction of the accelerated protons. In the latter case, we find a lower flux of the nonthermal proton population and a considerable magnetic field amplification. This would significantly increase the synchrotron losses of relativistic electrons accelerated in CWB systems, lowering the maximal energy they can reach and strongly reducing the inverse Compton fluxes. As a result, {$\gamma$}-rays from CWBs would be predominantly due to the decay of neutral pions produced in nucleon-nucleon collisions. This might provide a way to explain why, in the vast majority of cases, CWB systems have not been identified as {$\gamma$}-ray sources, although they emit synchrotron radiation.},
   keywords = {acceleration of particles,Astrophysics - High Energy Astrophysical Phenomena,binaries: general,magnetohydrodynamics: MHD,methods: numerical,shock waves},
   file = {/Users/py13je/Zotero/storage/TBZZBWBP/Grimaldo et al. - 2019 - Proton Acceleration in Colliding Stellar Wind Bina.pdf}
+}
+
+@article{gustafsonReevaluatingAmdahlLaw1988,
+  title = {Reevaluating {{Amdahl}}'s Law},
+  author = {Gustafson, John L.},
+  year = {1988},
+  month = may,
+  journal = {Commun. ACM},
+  volume = {31},
+  number = {5},
+  pages = {532--533},
+  issn = {0001-0782},
+  doi = {10.1145/42411.42415},
+  file = {/Users/py13je/Zotero/storage/5NGMJTSW/Gustafson - 1988 - Reevaluating Amdahl's law.pdf}
 }
 
 @article{hamaguchi_non-thermal_2018,
@@ -2866,6 +2896,22 @@
   file = {/Users/py13je/Zotero/storage/KIDWBAC7/S0012821X10005613.html}
 }
 
+@book{pachecoIntroductionParallelProgramming2022,
+  title = {An {{Introduction}} to {{Parallel Programming}} ({{Second Edition}})},
+  author = {Pacheco, Peter S. and Malensek, Matthew},
+  editor = {Pacheco, Peter S. and Malensek, Matthew},
+  year = {2022},
+  month = jan,
+  publisher = {{Morgan Kaufmann}},
+  address = {{Philadelphia}},
+  doi = {10.1016/B978-0-12-804605-0.00009-9},
+  abstract = {We start by discussing the von Neumann architecture and and some modifications to it: cache memories and instruction level parallelism. We continue by considering various parallel architectures. Among those we look at shared memory architectures and distributed memory architectures. We also look at Flynn's taxonomy that classifies systems according to the number of instruction streams and the number of data streams: single instruction stream, single data stream; single instruction stream, multiple data streams; and multiple instruction streams, multiple data streams. We discuss different interconnection networks for parallel systems. We consider software for the various types of parallel systems, and we look at Foster's methodology for developing parallel programs. We also consider various performance metrics for parallel systems.},
+  isbn = {978-0-12-804605-0},
+  langid = {english},
+  keywords = {cache,distributed memory systems,Foster's methodology,instruction level parallelism,interconnection networks,MIMD,shared memory systems,SIMD,SISD,von Neumann architecture},
+  file = {/Users/py13je/Zotero/storage/Z9ZY8HJ2/B9780128046050000099.html}
+}
+
 @article{parkin_3d_2008,
   title = {A {{3D}} Dynamical Model of the Colliding Winds in Binary Systems},
   author = {Parkin, E. R. and Pittard, J. M.},
@@ -3595,6 +3641,15 @@
   file = {/Users/py13je/Zotero/storage/GNQMR7TR/Schure et al. - 2009 - A new radiative cooling curve based on an up-to-da.pdf}
 }
 
+@misc{SCPFoundationSCPs,
+  title = {{{SCP Foundation SCPs}}: 4000 to 4999 / {{Nightmare Fuel}}},
+  shorttitle = {{{SCP Foundation SCPs}}},
+  journal = {TV Tropes},
+  abstract = {SCP Foundation Main Page SCP Foundation's Nightmare Fuel Index SCPs 001-299 | SCPs 300-999 | SCPs 1000-1999 | SCPs 2000-2999 | SCPs 3000-3999 | SCPs 4000-4999 | SCPs 5000-5999 | SCPs 6000-6999 Spoilers Off policy applies to Nightmare Fuel pages, \ldots},
+  howpublished = {https://tvtropes.org/pmwiki/pmwiki.php/NightmareFuel/SCPFoundationSCPs4000To4999},
+  file = {/Users/py13je/Zotero/storage/YRSEZCMP/SCPFoundationSCPs4000To4999.html}
+}
+
 @article{seeEffectsStellarWinds2014,
   title = {The Effects of Stellar Winds on the Magnetospheres and Potential Habitability of Exoplanets},
   author = {See, V. and Jardine, M. and Vidotto, A. A. and Petit, P. and Marsden, S. C. and Jeffers, S. V. and do Nascimento, J. D.},
@@ -4070,6 +4125,18 @@
   langid = {english},
   keywords = {Juvenile Nonfiction / Science \& Nature / General},
   file = {/Users/py13je/Zotero/storage/8828VZS5/Tritton - 2012 - Physical Fluid Dynamics.pdf}
+}
+
+@book{trobecIntroductionParallelComputing2018,
+  title = {Introduction to {{Parallel Computing}}: {{From Algorithms}} to {{Programming}} on {{State-of-the-Art Platforms}}},
+  author = {Trobec, Roman and Slivnik, Bo{\v s}tjan and Buli{\'c}, Patricio and Robi{\v c}, Borut},
+  editor = {Trobec, Roman and Slivnik, Bo{\v s}tjan and Buli{\'c}, Patricio and Robi{\v c}, Borut},
+  year = {2018},
+  publisher = {{Springer International Publishing}},
+  address = {{Cham}},
+  doi = {10.1007/978-3-319-98833-7_2},
+  isbn = {978-3-319-98833-7},
+  langid = {english}
 }
 
 @article{tuthill_dusty_1999,
