--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -47,7 +47,7 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
   $\mu$ & Mean molecular mass & \\
 
-  $\kappa$ & Sub-timestep fraction & Section \ref{eq:cooling-implementation} \\
+  $\kappa$ & Sub-timestep fraction & Section \ref{sec:cooling-implementation} \\
 
   $\chi$ & Cooling parameter  & Eq. \ref{eq:coolingparameter} \\
 
