Content basically done! Now for a bit of editing!

--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -96,6 +96,23 @@
   file = {/Users/py13je/Zotero/storage/W52K9PER/Acheson - Elementary Fluid Dynamics.djvu}
 }
 
+@article{aertsAngularMomentumTransport2019,
+  title = {Angular {{Momentum Transport}} in {{Stellar Interiors}}},
+  author = {Aerts, Conny and Mathis, St\'ephane and Rogers, Tamara M.},
+  date = {2019},
+  journaltitle = {Annual Review of Astronomy and Astrophysics},
+  volume = {57},
+  number = {1},
+  pages = {35--78},
+  doi = {10.1146/annurev-astro-091918-104359},
+  url = {https://doi.org/10.1146/annurev-astro-091918-104359},
+  urldate = {2022-03-21},
+  abstract = {Stars lose a significant amount of angular momentum between birth and death, implying that efficient processes transporting it from the core to the surface are active. Space asteroseismology delivered the interior rotation rates of more than a thousand low- and intermediate-mass stars, revealing the following: {$\blacksquare$} Single stars rotate nearly uniformly during the core-hydrogen and core-helium burning phases. {$\blacksquare$} Stellar cores spin up to a factor of 10 faster than the envelope during the red giant phase. {$\blacksquare$} The angular momentum of the helium-burning core of stars is in agreement with the angular momentum of white dwarfs.Observations reveal a strong decrease of core angular momentum when stars have a convective core. Current theory of angular momentum transport fails to explain this. We propose improving the theory with a data-driven approach, whereby angular momentum prescriptions derived frommultidimensional (magneto)hydrodynamical simulations and theoretical considerations are continuously tested against modern observations. The TESS and PLATO space missions have the potential to derive the interior rotation of large samples of stars, including high-mass and metal-poor stars in binaries and clusters. This will provide the powerful observational constraints needed to improve theory and simulations.},
+  keywords = {asteroseismology,stars: evolution,stars: interiors,stars: oscillations (including pulsations),stars: rotation,waves},
+  annotation = {\_eprint: https://doi.org/10.1146/annurev-astro-091918-104359},
+  file = {/Users/py13je/Zotero/storage/XUWAZRRL/Aerts et al. - 2019 - Angular Momentum Transport in Stellar Interiors.pdf}
+}
+
 @article{allen_infrared_1972,
   title = {Infrared Photometry of Northern {{Wolf-Rayet}} Stars.},
   author = {Allen, D. A. and Swings, J. P. and Harvey, P. M.},
@@ -202,7 +219,7 @@
   file = {/Users/py13je/Zotero/storage/J9T4CKVI/Arora et al. - 2019 - Long-term soft and hard X-ray investigation of the.pdf}
 }
 
-@online{astropy:2013,
+@unpublished{astropy:2013,
   title = {Astropy: {{A}} Community {{Python}} Package for Astronomy},
   author = {{Astropy Collaboration} and Robitaille, T. P. and Tollerud, E. J. and Greenfield, P. and Droettboom, M. and Bray, E. and Aldcroft, T. and Davis, M. and Ginsburg, A. and Price-Whelan, A. M. and Kerzendorf, W. E. and Conley, A. and Crighton, N. and Barbary, K. and Muna, D. and Ferguson, H. and Grollier, F. and Parikh, M. M. and Nair, P. H. and Unther, H. M. and Deil, C. and Woillez, J. and Conseil, S. and Kramer, R. and Turner, J. E. H. and Singer, L. and Fox, R. and Weaver, B. A. and Zabalza, V. and Edwards, Z. I. and Azalee Bostroem, K. and Burke, D. J. and Casey, A. R. and Crawford, S. M. and Dencheva, N. and Ely, J. and Jenness, T. and Labrie, K. and Lim, P. L. and Pierfederici, F. and Pontzen, A. and Ptak, A. and Refsdal, B. and Servillat, M. and Streicher, O.},
   date = {2013-10},
@@ -220,7 +237,7 @@
   keywords = {methods: data analysis,methods: miscellaneous,software,virtual observatory tools}
 }
 
-@online{astropy:2018,
+@unpublished{astropy:2018,
   title = {The Astropy Project: {{Building}} an Open-Science Project and Status of the v2.0 Core Package},
   author = {{Astropy Collaboration} and Price-Whelan, A. M. and Sip\H{o}cz, B. M. and G\"unther, H. M. and Lim, P. L. and Crawford, S. M. and Conseil, S. and Shupe, D. L. and Craig, M. W. and Dencheva, N. and Ginsburg, A. and Vand erPlas, J. T. and Bradley, L. D. and P\'erez-Su\'arez, D. and de Val-Borro, M. and Aldcroft, T. L. and Cruz, K. L. and Robitaille, T. P. and Tollerud, E. J. and Ardelean, C. and Babej, T. and Bach, Y. P. and Bachetti, M. and Bakanov, A. V. and Bamford, S. P. and Barentsen, G. and Barmby, P. and Baumbach, A. and Berry, K. L. and Biscani, F. and Boquien, M. and Bostroem, K. A. and Bouma, L. G. and Brammer, G. B. and Bray, E. M. and Breytenbach, H. and Buddelmeijer, H. and Burke, D. J. and Calderone, G. and Cano Rodr\'iguez, J. L. and Cara, M. and Cardoso, J. V. M. and Cheedella, S. and Copin, Y. and Corrales, L. and Crichton, D. and D'Avella, D. and Deil, C. and Depagne, \'E. and Dietrich, J. P. and Donath, A. and Droettboom, M. and Earl, N. and Erben, T. and Fabbro, S. and Ferreira, L. A. and Finethy, T. and Fox, R. T. and Garrison, L. H. and Gibbons, S. L. J. and Goldstein, D. A. and Gommers, R. and Greco, J. P. and Greenfield, P. and Groener, A. M. and Grollier, F. and Hagen, A. and Hirst, P. and Homeier, D. and Horton, A. J. and Hosseinzadeh, G. and Hu, L. and Hunkeler, J. S. and Ivezi\'c, \v{Z}. and Jain, A. and Jenness, T. and Kanarek, G. and Kendrew, S. and Kern, N. S. and Kerzendorf, W. E. and Khvalko, A. and King, J. and Kirkby, D. and Kulkarni, A. M. and Kumar, A. and Lee, A. and Lenz, D. and Littlefair, S. P. and Ma, Z. and Macleod, D. M. and Mastropietro, M. and McCully, C. and Montagnac, S. and Morris, B. M. and Mueller, M. and Mumford, S. J. and Muna, D. and Murphy, N. A. and Nelson, S. and Nguyen, G. H. and Ninan, J. P. and N\"othe, M. and Ogaz, S. and Oh, S. and Parejko, J. K. and Parley, N. and Pascual, S. and Patil, R. and Patil, A. A. and Plunkett, A. L. and Prochaska, J. X. and Rastogi, T. and Reddy Janga, V. and Sabater, J. and Sakurikar, P. and Seifert, M. and Sherbert, L. E. and Sherwood-Taylor, H. and Shih, A. Y. and Sick, J. and Silbiger, M. T. and Singanamalla, S. and Singer, L. P. and Sladen, P. H. and Sooley, K. A. and Sornarajah, S. and Streicher, O. and Teuben, P. and Thomas, S. W. and Tremblay, G. R. and Turner, J. E. H. and Terr\'on, V. and van Kerkwijk, M. H. and de la Vega, A. and Watkins, L. L. and Weaver, B. A. and Whitmore, J. B. and Woillez, J. and Zabalza, V. and {Astropy Contributors}},
   options = {useprefix=true},
@@ -1543,7 +1560,7 @@
   pagetotal = {672}
 }
 
-@online{greteKAthenaPerformancePortable2020,
+@unpublished{greteKAthenaPerformancePortable2020,
   title = {K-{{Athena}}: A Performance Portable Structured Grid Finite Volume Magnetohydrodynamics Code},
   shorttitle = {K-{{Athena}}},
   author = {Grete, Philipp and Glines, Forrest W. and O'Shea, Brian W.},
@@ -4163,6 +4180,23 @@
   file = {/Users/py13je/Zotero/storage/YEV4TCII/Sugawara et al. - 2017 - X-ray spectral variability of the colliding wind b.pdf;/Users/py13je/Zotero/storage/TXBFGQMB/ui.adsabs.harvard.edu.html}
 }
 
+@article{sugawaraSuzakuMonitoringWolf2015,
+  title = {Suzaku Monitoring of the {{Wolf}}\textendash{{Rayet}} Binary {{WR}}\,140 around Periastron Passage: {{An}} Approach for Quantifying the Wind Parameters},
+  shorttitle = {Suzaku Monitoring of the {{Wolf}}\textendash{{Rayet}} Binary {{WR}}\,140 around Periastron Passage},
+  author = {Sugawara, Yasuharu and Maeda, Yoshitomo and Tsuboi, Yohko and Hamaguchi, Kenji and Corcoran, Michael and Pollock, Andy M. T. and Moffat, Anthony F. J. and Williams, Peredur M. and Dougherty, Sean and Pittard, Julian},
+  date = {2015-12-04},
+  journaltitle = {Publications of the Astronomical Society of Japan},
+  volume = {67},
+  number = {6},
+  pages = {121},
+  issn = {0004-6264},
+  doi = {10.1093/pasj/psv099},
+  url = {https://doi.org/10.1093/pasj/psv099},
+  urldate = {2022-03-19},
+  abstract = {Suzaku observations of the Wolf\textendash Rayet (W\textendash R) binary WR\,140 (WC7pd+O5.5fc) were made at four different times around periastron passage in 2009 January. The spectra changed in shape and flux with the phase. As periastron approached, the column density of the low-energy absorption increased, which indicates that the emission from the wind\textendash wind collision plasma was absorbed by the dense W\textendash R wind. The spectra can be mostly fitted with two different components: a warm component with kBT = 0.3\textendash 0.6~keV and a dominant hot component with kBT {$\sim$} 3~keV. The emission measure of the dominant, hot component is not inversely proportional to the distance between the two stars. This can be explained by the O star wind colliding before it has reached its terminal velocity, leading to a reduction in its wind momentum flux. At phases closer to periastron, we discovered a cool plasma component in a recombining phase, which is less absorbed. This component may be a relic of the wind\textendash wind collision plasma, which was cooled down by radiation, and may represent a transitional stage in dust formation.},
+  file = {/Users/py13je/Zotero/storage/7YY6MUE9/Sugawara et al. - 2015 - Suzaku monitoring of the Wolf–Rayet binary WR 140 .pdf;/Users/py13je/Zotero/storage/9XBXU5FG/2470041.html}
+}
+
 @article{sumpterEvolvingGrainsizeDistributions2020,
   title = {Evolving Grain-Size Distributions Embedded in Gas Flows},
   author = {Sumpter, R and Van~Loo, S},
@@ -5021,7 +5055,7 @@
   file = {/Users/py13je/Zotero/storage/43VX3KCA/Williams - 2019 - Variable dust emission by WC type Wolf–Rayet stars.pdf;/Users/py13je/Zotero/storage/7C9TBECL/5526235.html}
 }
 
-@online{williamsWR140Infrared2011,
+@unpublished{williamsWR140Infrared2011,
   title = {{{WR}} 140 in the {{Infrared}}},
   author = {Williams, Peredur},
   date = {2011-01-05},
@@ -5130,7 +5164,7 @@
   file = {/Users/py13je/Zotero/storage/9WI8GEAG/Zhekov et al. - 2014 - A multiwavelength view on the dusty Wolf–Rayet sta.pdf;/Users/py13je/Zotero/storage/DPCW6Q44/1415154.html}
 }
 
-@online{zingale_pyro_2013,
+@unpublished{zingale_pyro_2013,
   title = {Pyro: {{A}} Teaching Code for Computational Astrophysical Hydrodynamics},
   shorttitle = {Pyro},
   author = {Zingale, Michael},
