--- a/References/library.bib
+++ b/References/library.bib
@@ -89,6 +89,21 @@
   file = {/Users/py13je/Zotero/storage/W52K9PER/Acheson - Elementary Fluid Dynamics.djvu}
 }
 
+@article{aertsAngularMomentumTransport2019,
+  title = {Angular {{Momentum Transport}} in {{Stellar Interiors}}},
+  author = {Aerts, Conny and Mathis, St{\'e}phane and Rogers, Tamara M.},
+  year = {2019},
+  journal = {Annual Review of Astronomy and Astrophysics},
+  volume = {57},
+  number = {1},
+  pages = {35--78},
+  doi = {10.1146/annurev-astro-091918-104359},
+  abstract = {Stars lose a significant amount of angular momentum between birth and death, implying that efficient processes transporting it from the core to the surface are active. Space asteroseismology delivered the interior rotation rates of more than a thousand low- and intermediate-mass stars, revealing the following: {$\blacksquare$} Single stars rotate nearly uniformly during the core-hydrogen and core-helium burning phases. {$\blacksquare$} Stellar cores spin up to a factor of 10 faster than the envelope during the red giant phase. {$\blacksquare$} The angular momentum of the helium-burning core of stars is in agreement with the angular momentum of white dwarfs.Observations reveal a strong decrease of core angular momentum when stars have a convective core. Current theory of angular momentum transport fails to explain this. We propose improving the theory with a data-driven approach, whereby angular momentum prescriptions derived frommultidimensional (magneto)hydrodynamical simulations and theoretical considerations are continuously tested against modern observations. The TESS and PLATO space missions have the potential to derive the interior rotation of large samples of stars, including high-mass and metal-poor stars in binaries and clusters. This will provide the powerful observational constraints needed to improve theory and simulations.},
+  keywords = {asteroseismology,stars: evolution,stars: interiors,stars: oscillations (including pulsations),stars: rotation,waves},
+  annotation = {\_eprint: https://doi.org/10.1146/annurev-astro-091918-104359},
+  file = {/Users/py13je/Zotero/storage/XUWAZRRL/Aerts et al. - 2019 - Angular Momentum Transport in Stellar Interiors.pdf}
+}
+
 @article{allen_infrared_1972,
   title = {Infrared Photometry of Northern {{Wolf-Rayet}} Stars.},
   author = {Allen, D. A. and Swings, J. P. and Harvey, P. M.},
@@ -3894,6 +3909,22 @@
   abstract = {A powerful, streamlined new Astrophysics Data System},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/YEV4TCII/Sugawara et al. - 2017 - X-ray spectral variability of the colliding wind b.pdf;/Users/py13je/Zotero/storage/TXBFGQMB/ui.adsabs.harvard.edu.html}
+}
+
+@article{sugawaraSuzakuMonitoringWolf2015,
+  title = {Suzaku Monitoring of the {{Wolf}}\textendash{{Rayet}} Binary {{WR}}\,140 around Periastron Passage: {{An}} Approach for Quantifying the Wind Parameters},
+  shorttitle = {Suzaku Monitoring of the {{Wolf}}\textendash{{Rayet}} Binary {{WR}}\,140 around Periastron Passage},
+  author = {Sugawara, Yasuharu and Maeda, Yoshitomo and Tsuboi, Yohko and Hamaguchi, Kenji and Corcoran, Michael and Pollock, Andy M. T. and Moffat, Anthony F. J. and Williams, Peredur M. and Dougherty, Sean and Pittard, Julian},
+  year = {2015},
+  month = dec,
+  journal = {Publications of the Astronomical Society of Japan},
+  volume = {67},
+  number = {6},
+  pages = {121},
+  issn = {0004-6264},
+  doi = {10.1093/pasj/psv099},
+  abstract = {Suzaku observations of the Wolf\textendash Rayet (W\textendash R) binary WR\,140 (WC7pd+O5.5fc) were made at four different times around periastron passage in 2009 January. The spectra changed in shape and flux with the phase. As periastron approached, the column density of the low-energy absorption increased, which indicates that the emission from the wind\textendash wind collision plasma was absorbed by the dense W\textendash R wind. The spectra can be mostly fitted with two different components: a warm component with kBT = 0.3\textendash 0.6~keV and a dominant hot component with kBT {$\sim$} 3~keV. The emission measure of the dominant, hot component is not inversely proportional to the distance between the two stars. This can be explained by the O star wind colliding before it has reached its terminal velocity, leading to a reduction in its wind momentum flux. At phases closer to periastron, we discovered a cool plasma component in a recombining phase, which is less absorbed. This component may be a relic of the wind\textendash wind collision plasma, which was cooled down by radiation, and may represent a transitional stage in dust formation.},
+  file = {/Users/py13je/Zotero/storage/7YY6MUE9/Sugawara et al. - 2015 - Suzaku monitoring of the Wolf–Rayet binary WR 140 .pdf;/Users/py13je/Zotero/storage/9XBXU5FG/2470041.html}
 }
 
 @article{sumpterEvolvingGrainsizeDistributions2020,
