--- a/Thesis.tex
+++ b/Thesis.tex
@@ -160,6 +160,12 @@
 
 \newcommand{\atom}[3]{\prescript{#2}{#3}{\text{#1}}}
 
+\newcommand{\turbo}[1]{\textcolor{red}{\emph{\textbf{\texttt{\MakeUppercase{<<!!!#1!!!>>}}}}}}
+
+
+\newcommand{\firstpapertitle}{An Exploration of Dust Growth Within WCd Systems Using An Advected Scalar Dust Model}
+\newcommand{\secondpapertitle}{Exploring Dust Growth in the Episodic WCd System WR140}
+
 % Setup for BibLaTeX, used instead of BibTeX as it is more flexible
 \usepackage[
   style=apa,        % Use American Psychological Association style
@@ -187,7 +193,7 @@
 \AtEveryBibitem{\clearfield{note}}
 \AtEveryCitekey{\clearfield{note}\clearfield{annotation}}
 
-\linespread{1.3} %1.5 line spacing
+\linespread{1.25} %1.5 line spacing
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% Uncommon units %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
