Finished first true draft of chapter 2!

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -7,17 +7,19 @@ List of common abbreviations, a section is referenced when applicable. Entries a
     
     \hline
 
-    3$\alpha$ & Triple-$\alpha$ & \ref{sec:evolvedstars} \\
-    AGB & Asymptotic Giant Branch & \ref{sec:evolvedstars} \\
     \bidmas{} & Binary Interaction Dust Model with Accretion and Sputtering & Section \ref{sec:bidmas} \\
+    3$\alpha$ & Triple-$\alpha$ & Section \ref{sec:evolvedstars} \\
+    AGB & Asymptotic Giant Branch & Section \ref{sec:evolvedstars} \\
     CAK & Castor, Abbott \& Klein (\citeyear{castor_radiation-driven_1975}) theory & Section \ref{sec:cak} \\
     CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
     FGC & Fighting Game Community & Section \ref{sec:wcrcooling} \\
     GCR & Galactic Cosmic Ray & Section \ref{sec:wcrcooling} \\
     GMC & Giant Molecular Cloud & Section \ref{sec:obtype}\\
     ISM & InterStellar Medium & Section \ref{sec:earlytype} \\
-    KH  & Kelvin-Helmholtz & \ref{sec:earlytype} \\ 
+    KH  & Kelvin-Helmholtz & Section \ref{sec:earlytype} \\ 
     LBV & Luminous Blue Variable & Section \ref{sec:obtype} \\
+    MESA & Modules for Experiments in Stellar Astrophysics & Section \ref{sec:evolvedstars} \\
+    MIST & MESA Isochrones and Stellar Tracks & Section \ref{sec:evolvedstars} \\
     OB  & O or B type star & Section \ref{sec:obtype} \\ 
     PAH & Polycyclic Aromatic Hydrocarbon & Section \ref{sec:dust} \\
     RSG & Red Supergiant & Section \ref{sec:obtype} \\
@@ -35,7 +37,7 @@ List of common abbreviations, a section is referenced when applicable. Entries a
     GNU  & GNU's Not Unix! & \\
     GPU  & Graphics Processing Unit & \\
     ICC  & Intel Compiler Collection & \\
-    JIT  & Just In Time & Section \ref{sec:visualisation} \\
+    JIT  & Just In Time & Appendix \ref{sec:visualisation} \\
     MPI  & Message Passing Interface & Appendix \ref{app:parallelism} \\
     SIMD & Single Instruction, Multiple Data & \\
     SMT  & Simultaneous Multi-Threading & \\
