--- a/References/library.bib
+++ b/References/library.bib
@@ -722,6 +722,22 @@
   file = {/Users/py13je/Zotero/storage/KN674Z4A/Chini et al. - 2012 - A spectroscopic survey on the multiplicity of high.pdf}
 }
 
+@article{choiMesaIsochronesStellar2016,
+  title = {Mesa {{Isochrones}} and {{Stellar Tracks}} ({{MIST}}). {{I}}. {{Solar-scaled Models}}},
+  author = {Choi, Jieun and Dotter, Aaron and Conroy, Charlie and Cantiello, Matteo and Paxton, Bill and Johnson, Benjamin D.},
+  year = {2016},
+  month = jun,
+  journal = {The Astrophysical Journal},
+  volume = {823},
+  pages = {102},
+  issn = {0004-637X},
+  doi = {10.3847/0004-637X/823/2/102},
+  abstract = {This is the first of a series of papers presenting the Modules for Experiments in Stellar Astrophysics (MESA) Isochrones and Stellar Tracks (MIST) project, a new comprehensive set of stellar evolutionary tracks and isochrones computed using MESA, a state-of-the-art open-source 1D stellar evolution package. In this work, we present models with solar-scaled abundance ratios covering a wide range of ages (5{$\leq$}slant \{log\}(\{Age\}) [\{year\}]{$\leq$}slant 10.3), masses (0.1{$\leq$}slant M/\{M\}{$\odot$} {$\leq$}slant 300), and metallicities (-2.0{$\leq$}slant [\{\{Z\}\}/\{\{H\}\}]{$\leq$}slant 0.5). The models are self-consistently and continuously evolved from the pre-main sequence (PMS) to the end of hydrogen burning, the white dwarf cooling sequence, or the end of carbon burning, depending on the initial mass. We also provide a grid of models evolved from the PMS to the end of core helium burning for -4.0{$\leq$}slant [\{\{Z\}\}/\{\{H\}\}] -2.0. We showcase extensive comparisons with observational constraints as well as with some of the most widely used existing models in the literature. The evolutionary tracks and isochrones can be downloaded from the project website at http://waps.cfa.harvard.edu/MIST/.},
+  keywords = {Astrophysics - Solar and Stellar Astrophysics,stars: evolution,stars: general,stars: interiors},
+  annotation = {ADS Bibcode: 2016ApJ...823..102C},
+  file = {/Users/py13je/Zotero/storage/QXCYQGHK/Choi et al. - 2016 - Mesa Isochrones and Stellar Tracks (MIST). I. Sola.pdf}
+}
+
 @article{chokshiDustCoagulation1993,
   title = {Dust {{Coagulation}}},
   author = {Chokshi, Arati and Tielens, A. G. G. M. and Hollenbach, D.},
@@ -983,6 +999,23 @@
   abstract = {The chemical abundances ofWolf-Rayet ([WC]) central stars are reviewed. Although the evolutionary connection between cooler (late) and hotter (early) [WC] central stars and PGl159 central stars is now on solid ground, several issues still remain. In particular, hydrogen and oxygen abundances, that could provide a way of discriminating between different evolutionary channels, are affected by large uncertainties. Following the ground-breaking discovery that cool [WC] central stars harbor hot carbon- as well as hot oxygen-rich dust, current theories of their origin have been put in serious doubt. Observations of three cool [WC] central stars are presented here which, while confirming the deficiency of our theoretical understanding, hint at the possibility of alternative scenarios, such as dust-storing disks.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/66XL6E7V/De Marco - 2003 - Abundances of [WC] Central Stars of PN and the Dou.pdf}
+}
+
+@article{dotterMESAIsochronesStellar2016,
+  title = {{{MESA Isochrones}} and {{Stellar Tracks}} ({{MIST}}) 0: {{Methods}} for the {{Construction}} of {{Stellar Isochrones}}},
+  shorttitle = {{{MESA Isochrones}} and {{Stellar Tracks}} ({{MIST}}) 0},
+  author = {Dotter, Aaron},
+  year = {2016},
+  month = jan,
+  journal = {The Astrophysical Journal Supplement Series},
+  volume = {222},
+  pages = {8},
+  issn = {0067-0049},
+  doi = {10.3847/0067-0049/222/1/8},
+  abstract = {I describe a method to transform a set of stellar evolution tracks onto a uniform basis and then interpolate within that basis to construct stellar isochrones. This method accommodates a broad range of stellar types, from substellar objects to high-mass stars, and phases of evolution, from the pre-main sequence to the white dwarf cooling sequence. I discuss situations in which stellar physics leads to departures from the otherwise monotonic relation between initial stellar mass and lifetime, and how these may be dealt with in isochrone construction. I close with convergence tests and recommendations for the number of points in the uniform basis and the mass between tracks in the original grid required to achieve a certain level accuracy in the resulting isochrones. The programs that implement these methods are free and open-source; they may be obtained from the project webpage.1},
+  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Astrophysics - Solar and Stellar Astrophysics,methods: numerical,stars: evolution},
+  annotation = {ADS Bibcode: 2016ApJS..222....8D},
+  file = {/Users/py13je/Zotero/storage/2327W9XD/Dotter - 2016 - MESA Isochrones and Stellar Tracks (MIST) 0 Metho.pdf}
 }
 
 @article{dougherty_radio_2003,
@@ -3015,6 +3048,22 @@
   abstract = {The dynamics of radiation-driven winds in hot-luminous-star atmospheres is investigated theoretically on the basis of model computations. The model of Castor et al. (1975) is modified by dropping the radial-streaming approximation for the driving photons and applying the force multipliers of Abbot (1982), and the validity of the model formulation is tested comparing its predictions with those obtained by solving the hydrodynamics and the correct radiative transfer in the comoving frame simultaneously for a sample of weak, intermediate, and strong lines at different continuum wavelengths. Numerical results, including estimates of mass-loss rate and terminal velocity for a sample of OB stars, are presented in tables and graphs and evaluated in detail.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/KLN49PU2/Pauldrach et al. - 1986 - Radiation-driven winds of hot luminous stars. Impr.pdf;/Users/py13je/Zotero/storage/V5KZSNXH/abstract.html}
+}
+
+@article{paxtonModulesExperimentsStellar2011,
+  title = {Modules for {{Experiments}} in {{Stellar Astrophysics}} ({{MESA}})},
+  author = {Paxton, Bill and Bildsten, Lars and Dotter, Aaron and Herwig, Falk and Lesaffre, Pierre and Timmes, Frank},
+  year = {2011},
+  month = jan,
+  journal = {The Astrophysical Journal Supplement Series},
+  volume = {192},
+  pages = {3},
+  issn = {0067-0049},
+  doi = {10.1088/0067-0049/192/1/3},
+  abstract = {Stellar physics and evolution calculations enable a broad range of research in astrophysics. Modules for Experiments in Stellar Astrophysics (MESA) is a suite of open source, robust, efficient, thread-safe libraries for a wide range of applications in computational stellar astrophysics. A one-dimensional stellar evolution module, MESAstar, combines many of the numerical and physics modules for simulations of a wide range of stellar evolution scenarios ranging from very low mass to massive stars, including advanced evolutionary phases. MESAstar solves the fully coupled structure and composition equations simultaneously. It uses adaptive mesh refinement and sophisticated timestep controls, and supports shared memory parallelism based on OpenMP. State-of-the-art modules provide equation of state, opacity, nuclear reaction rates, element diffusion data, and atmosphere boundary conditions. Each module is constructed as a separate Fortran 95 library with its own explicitly defined public interface to facilitate independent development. Several detailed examples indicate the extensive verification and testing that is continuously performed and demonstrate the wide range of capabilities that MESA possesses. These examples include evolutionary tracks of very low mass stars, brown dwarfs, and gas giant planets to very old ages; the complete evolutionary track of a 1 M sun star from the pre-main sequence (PMS) to a cooling white dwarf; the solar sound speed profile; the evolution of intermediate-mass stars through the He-core burning phase and thermal pulses on the He-shell burning asymptotic giant branch phase; the interior structure of slowly pulsating B Stars and Beta Cepheids; the complete evolutionary tracks of massive stars from the PMS to the onset of core collapse; mass transfer from stars undergoing Roche lobe overflow; and the evolution of helium accretion onto a neutron star. MESA can be downloaded from the project Web site (http://mesa.sourceforge.net/).},
+  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Astrophysics - Solar and Stellar Astrophysics,methods: numerical,stars: evolution,stars: general},
+  annotation = {ADS Bibcode: 2011ApJS..192....3P},
+  file = {/Users/py13je/Zotero/storage/K6EPGDC2/Paxton et al. - 2011 - Modules for Experiments in Stellar Astrophysics (M.pdf}
 }
 
 @article{pierazzoOzonePerturbationMediumsize2010,
